--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(labor2)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(labor2 main.cpp list.h list.cpp)
+add_executable(labor2 main.cpp list.h)
